# YandexTraining

./: CMakeLists.txt  README.md  conanfile.py
.github/workflows/: build_cmake.yml
src/: CMakeLists.txt
src/HW_B1/Task_A/: CMakeLists.txt  main.cpp  task_A.md
src/HW_B1/Task_B/: task_B.md
src/HW_B1/Task_C/: CMakeLists.txt
src/HW_B1/Task_D/: task_D.md
src/HW_B1/Task_E/: main.cpp
src/HW_B2/Task_A/: CMakeLists.txt  main.cpp  task_A.md
src/HW_B2/Task_B/: CMakeLists.txt  main.cpp  task_B.md
src/HW_B2/Task_C/: CMakeLists.txt  main.cpp  task_C.md
src/HW_B2/Task_D/: CMakeLists.txt  main.cpp  task_D.md
src/HW_B2/Task_E/: CMakeLists.txt  main.cpp  task_D.md
src/HW_B3/Task_A/: CMakeLists.txt  main.cpp  task_A.md
src/HW_B3/Task_B/: CMakeLists.txt  main.cpp  task_B.md
src/HW_B3/Task_C/: CMakeLists.txt  main.cpp  task_C.md
src/HW_B3/Task_D/: CMakeLists.txt  main.cpp  task_D.md
src/HW_B3/Task_E/: CMakeLists.txt  main.cpp  task_E.md
src/HW_B4/Task_A/: CMakeLists.txt  main.cpp  task_A.md
src/HW_B4/Task_B/: CMakeLists.txt  main.cpp  task_B.md
src/HW_B4/Task_C/: CMakeLists.txt  main.cpp  task_C.md
src/HW_B4/Task_D/: CMakeLists.txt  main.cpp  task_D.md
src/HW_B4/Task_E/: CMakeLists.txt  main.cpp  task_E.md
src/HW_B5/Task_A/: CMakeLists.txt  main.cpp  task_A.md
src/HW_B5/Task_B/: CMakeLists.txt  main.cpp  task_B.md
src/HW_B5/Task_C/: CMakeLists.txt  main.cpp  task_C.md
src/HW_B5/Task_D/: CMakeLists.txt  main.cpp  task_D.md
src/HW_B5/Task_E/: CMakeLists.txt  main.cpp  task_E.md
src/HW_B6/Task_A/: CMakeLists.txt  main.cpp  task_A.md
src/HW_B6/Task_B/: CMakeLists.txt  main.cpp  task_B.md
src/HW_B6/Task_C/: CMakeLists.txt  main.cpp  task_C.md
src/HW_B6/Task_D/: CMakeLists.txt  main.cpp  task_D.md
src/HW_B6/Task_E/: CMakeLists.txt  main.cpp  task_E.md
src/HW_B7/Task_A/: CMakeLists.txt  main.cpp  task_A.md
src/HW_B7/Task_B/: CMakeLists.txt  main.cpp  task_B.md
src/HW_B7/Task_C/: CMakeLists.txt  main.cpp  task_C.md
src/HW_B7/Task_D/: CMakeLists.txt  main.cpp  task_D.md
src/HW_B7/Task_E/: CMakeLists.txt  main.cpp  task_E.md  tests.txt
src/Homework_1B/Task_A/: main.cpp
src/Homework_1B/Task_B/: CMakeLists.txt  main.cpp
src/Homework_1B/Task_C/: main.cpp  task_C.md
src/Homework_1B/Task_D/: CMakeLists.txt  main.cpp
src/Homework_1B/Task_E/: CMakeLists.txt  task_E.md
test/: CMakeLists.txt  tests_task_C.cpp  tests_task_D.cpp  tests_task_E.cpp
test/HW_B1/: CMakeLists.txt  tests_task_A.cpp  tests_task_B.cpp
test/HW_B2/: CMakeLists.txt  tests_task_A.cpp  tests_task_B.cpp  tests_task_C.cpp  tests_task_D.cpp  tests_task_E.cpp
test/HW_B3/: CMakeLists.txt  tests_task_A.cpp
test/HW_B4/: CMakeLists.txt  tests_task_D.cpp
test/HW_B5/: CMakeLists.txt  tests_task_B.cpp
test/HW_B6/: CMakeLists.txt  tests_task_A.cpp
