add_subdirectory(HW_B1/Task_A)
add_subdirectory(HW_B1/Task_B)
add_subdirectory(HW_B1/Task_C)
add_subdirectory(HW_B1/Task_D)
add_subdirectory(HW_B1/Task_E)

add_subdirectory(HW_B2/Task_A)
add_subdirectory(HW_B2/Task_B)
add_subdirectory(HW_B2/Task_C)
add_subdirectory(HW_B2/Task_D)
add_subdirectory(HW_B2/Task_E)

add_subdirectory(HW_B3/Task_A)
add_subdirectory(HW_B3/Task_B)
add_subdirectory(HW_B3/Task_C)
add_subdirectory(HW_B3/Task_D)
add_subdirectory(HW_B3/Task_E)

add_subdirectory(HW_B4/Task_A)
add_subdirectory(HW_B4/Task_B)
add_subdirectory(HW_B4/Task_C)
add_subdirectory(HW_B4/Task_D)
add_subdirectory(HW_B4/Task_E)

add_subdirectory(HW_B5/Task_A)